--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -171,6 +171,7 @@
         <button id="buyButton" disabled="true">Buy</button>
         <button id="sellButton" disabled="true">Mortgage</button>
         <button id="tradeButton" disabled="true">Trade</button>
+        <button id="leaveJail" disabled="true">Pay fine</button>
         <button id="resignButton" disabled="true">Resign</button>
         <button id="endTurnButton" onclick="end_turn_click()" disabled="true">End Turn</button>
     </div>
@@ -249,7 +250,7 @@
                         </div>
                         <div class="col-6">
                             <div class="text-center py-2" style="position:relative; right:23em; bottom:7em;">
-                                <!-- <button type="button" id="throw" class="btn btn-primary" disabled="true">Throw!</button> -->
+                                <button type="button" id="throw" class="btn btn-primary" disabled="true">Throw!</button>
                             </div>
                         </div>
                         <div class="col">
