networking on updating player position

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -182,7 +182,7 @@
     </div>
 </div>
 <div><h2 id="endGame" style="text-align: center; display: none"></h2></div>
-<table id="board">
+<table id="board" style="display:none">
     <tr>
         <td class="cell board-corner" id="cell20"></td>
         <td class="cell board-top" id="cell21" onclick="bingImageSearch('Capilano Bridge', 21)"></td>
@@ -275,7 +275,6 @@
                     <div class="col">
                     </div>
                 </div>
-            </div>
         </td>
         <td class="cell board-right" id="cell36"></td>
     </tr>
