Die faces synced between clients, throw button not disabling

--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -256,7 +256,7 @@
                             <img src="images/f0.png" class="dice" id="d0" class="rounded" alt="...">
                             <img src="images/f0.png" class="dice" id="d1" class="rounded" alt="..."> &nbsp;
                            <div></div>
-                            <button type="button" id="throw" class="btn btn-primary" disabled="true" onclick="throwDice()">Throw!</button>
+                            <button type="button" id="throw" class="btn btn-primary" disabled="true">Throw!</button>
 
                            </div>
                         </div>
