--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -309,16 +309,19 @@
         <td class="cell board-corner" id="cell0"></td>
     </tr>
 </table>
+<div id="chatBox">
+        <div id="messageDisplay">
+            <ul id="messages"></ul>
+        </div>
+        <div id="enterMessage">
+            <form action="/" method="POST" id="chatForm">
+            <input id="txt" autocomplete="off" autofocus="on" placeholder="say something..." /><button>Send</button>
+            </form>
 
+        </div>
+    </div>
 
         
-    <!-- weather api  -->
-    <!-- <p id="weather-text">Current Weather via OpenWeatherMap.org</p>
-    <div id="weather">
-        <div id="description">raining</div>
-        <h1 id="temp">10</h1>
-        <div id="location">Vancouver</div>
-    </div> -->
 </body>
 
 <footer>
