--- a/views/pages/gamePage.ejs
+++ b/views/pages/gamePage.ejs
@@ -166,7 +166,9 @@
     </secion>
 
     <center><button type="button" id="readyButton" class="btn btn-primary" style="font-size:4em; margin-top:1em;" onClick="ready_button_click()">Ready</button></center>
+    <center><div id="round_info" style="display:none;"></div></center>
     <center><div id="turn_info" style="display:none;"></div></center>
+    <h2 id="endGame" style="text-align: center; display:none"></h2>
     <div id="control">
     <div class="playerOptions-btn-group">
         <button id="buyButton" disabled="true">Buy</button>
@@ -181,7 +183,7 @@
 
     </div>
 </div>
-<div><h2 id="endGame" style="text-align: center; display: none"></h2></div>
+
 <table id="board" style="display:none">
     <tr>
         <td class="cell board-corner" id="cell20"></td>
